Fix dot chain z-indexing issue.

--- a/styles/index.less
+++ b/styles/index.less
@@ -67,6 +67,7 @@ h3 {
         width: 179px;
         height: 179px;
         border-radius: 100%;
+        z-index: 1001;
 
         font-size: 20px;
         color: #ffffff;
